# noctalia-unofficial-auth-agent

./: .gitignore  CMakeLists.txt  PKGBUILD  README.md  build-dev.sh  flake.nix  noctalia-polkit.install
assets/: bb-auth-bootstrap.sh.in  bb-auth-dbus.service.in  bb-auth.service.in  noctalia-polkit.service.in  org.gnome.keyring.SystemPrompter.service.in  org.noctalia.polkitagent.conf
docs/: TROUBLESHOOTING.md
nix/: default.nix  overlays.nix  shell.nix
scripts/: bb-auth-migrate.sh  drift-check.sh
src/: main.cpp
src/common/: Constants.hpp  IpcClient.cpp  IpcClient.hpp  Paths.cpp  Paths.hpp
src/core/: Agent.cpp  Agent.hpp  PolkitListener.cpp  PolkitListener.hpp  RequestContext.cpp  RequestContext.hpp  Session.cpp  Session.hpp
src/core/agent/: EventQueue.cpp  EventQueue.hpp  EventRouter.cpp  EventRouter.hpp  MessageRouter.cpp  MessageRouter.hpp  ProviderRegistry.cpp  ProviderRegistry.hpp  SessionStore.cpp  SessionStore.hpp
src/core/ipc/: IpcServer.cpp  IpcServer.hpp
src/core/managers/: KeyringManager.cpp  KeyringManager.hpp  PinentryManager.cpp  PinentryManager.hpp  RequestTypes.hpp
src/fallback/: FallbackClient.cpp  FallbackClient.hpp  FallbackWindow.cpp  FallbackWindow.hpp  main.cpp
src/fallback/prompt/: PromptExtractors.cpp  PromptExtractors.hpp  PromptHeuristics.cpp  PromptHeuristics.hpp  PromptModel.hpp  PromptModelBuilder.cpp  PromptModelBuilder.hpp  TextNormalize.cpp  TextNormalize.hpp
src/keyring-prompter/: bb-prompt.c  bb-prompt.h  ipc-client.c  ipc-client.h  main.c  noctalia-prompt.c  noctalia-prompt.h
src/modes/: daemon.cpp  keyring.cpp  pinentry.cpp
tests/: test_agent_routing.cpp  test_fallback_touch_model.cpp  test_session_info.cpp
